--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,7 @@
   }
 
   .btn-primary {
-    @apply w-full text-sm bg-primary text-white p-2 rounded my-1 hover:bg-blue-600
+    @apply w-full text-sm bg-primary cursor-pointer text-white p-2 rounded my-1 hover:bg-blue-600
   }
 
   .icon-btn {
